src/objects/ccrz__E_OrderItemGroup__c.object
<CustomObject>
    <description>Order Item Group represents a group of items on the order who share shipping details.</description>
    <fields>
        <fullName>ccrz__GroupName__c</fullName>
        <description>The group name as copied from the cart item group.</description>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Note__c</fullName>
        <description>The shipping note for this item group, if specified</description>
        <label>Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mulesoft_Response_Description__c</fullName>
        <label>Mulesoft Response Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderItemGroupId__c</fullName>
        <description>External key for Order Item Groups</description>
        <label>OrderItemGroupId</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Order__c</fullName>
        <description>The Order that the Order Item Group is associated with.</description>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Order Item Groups</relationshipLabel>
        <relationshipName>E_OrderItemGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__RequestDate__c</fullName>
        <description>The Requested Date for this Item Group, if specified</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipAmount__c</fullName>
        <description>The shipping subtotal for this item group</description>
        <label>Ship Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipMethod__c</fullName>
        <description>The shipping method selected for this item group</description>
        <label>Ship Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Shipping Address for this item group</description>
        <label>Ship To</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>Order Item Groups</relationshipLabel>
        <relationshipName>E_OrdertItemGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Arrangement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Arrangement</label>
        <referenceTo>ccrz__E_PriceList__c</referenceTo>
        <relationshipLabel>CC Order Item Groups</relationshipLabel>
        <relationshipName>CC_Order_Item_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_OrderNumber__c</fullName>
        <label>SAP_OrderNumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item_Group_Status__c</fullName>
        <description>Displayed Order Item Group  status. Order Item Group status initially placed are all in Order Submitted status. All other statuses may be implementation specific.</description>
        <label>Order Item Group Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Order Submitted</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Return Submitted</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Partial Shipped</fullName>
                </value>
                <value>
                    <fullName>Bill Of Material</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Order Not Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Failure_Count__c</fullName>
        <label>Submission Failure Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Email_Nalco__c</fullName>
        <defaultValue>$Label.EC_SupportEmail_Nalco</defaultValue>
        <label>Support Email Nalco</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EC_CSR_Email__c</fullName>
        <label>CSR Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Order Item Group</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Order Item Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>